exports[`<CentralizedControllerPopup /> snapshot with popId="add" 1`] = `
<div
  className="centralized-popup">
  <div
    className="modal-content ">
    <div
      className="modal-header">
      <button
        aria-label="Close"
        className="close"
        data-dismiss="modal"
        onClick={[Function]}
        type="button">
        <span
          aria-hidden="true">
          ×
        </span>
      </button>
      <h4
        className="modal-title">
        添加设备
      </h4>
    </div>
    <div
      className="modal-body">
      <div
        className="popup-left">
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="id">
            设备编号：
          </label>
          <div
            className="fixed-width-right">
            <input
              className="form-control"
              disabled={false}
              id="id"
              maxLength={16}
              onChange={[Function]}
              placeholder="id"
              type="text"
              value="sdf" />
            <span
              className="prompt hidden">
              不合法
            </span>
          </div>
        </div>
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="name">
            名称：
          </label>
          <div
            className="fixed-width-right">
            <input
              className="form-control"
              id="name"
              maxLength={16}
              onChange={[Function]}
              placeholder="name"
              type="text"
              value="name01" />
            <span
              className="prompt hidden">
              不合法
            </span>
          </div>
        </div>
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="model">
            型号：
          </label>
          <div
            className="fixed-width-right">
            <select
              className="form-control select form-control"
              disabled={false}
              id="model"
              onChange={[Function]}
              value="model01">
              <option
                value="model01">
                model01
              </option>
              <option
                value="model02">
                model02
              </option>
              <option
                value="model03">
                model03
              </option>
              <option
                value="model04">
                model04
              </option>
              <option
                value="model05">
                model05
              </option>
              <option
                value="model06">
                model06
              </option>
              <option
                value="model07">
                model07
              </option>
            </select>
          </div>
        </div>
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="domain">
            域：
          </label>
          <div
            className="fixed-width-right">
            <select
              className="form-control select form-control"
              id="domain"
              onChange={[Function]}
              value="domain01">
              <option
                value="domain01">
                domain01
              </option>
              <option
                value="domain02">
                domain02
              </option>
              <option
                value="domain03">
                domain03
              </option>
              <option
                value="domain04">
                domain04
              </option>
              <option
                value="domain05">
                domain05
              </option>
              <option
                value="domain06">
                domain06
              </option>
              <option
                value="domain07">
                domain07
              </option>
            </select>
            <span
              className="prompt hidden">
              请添加域
            </span>
          </div>
        </div>
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="lng">
            经度：
          </label>
          <div
            className="fixed-width-right">
            <input
              className="form-control"
              id="lng"
              onChange={[Function]}
              placeholder="lng"
              type="text"
              value={121.49971691534425} />
            <span
              className="prompt hidden">
              经度数不合法
            </span>
          </div>
        </div>
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="lat">
            纬度：
          </label>
          <div
            className="fixed-width-right">
            <input
              className="form-control"
              id="lat"
              onChange={[Function]}
              placeholder="lat"
              type="text"
              value={31.239658843127756} />
            <span
              className="prompt hidden">
              纬度数不合法
            </span>
          </div>
        </div>
        <div
          className="modal-footer">
          <button
            className="btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button">
            取消
          </button>
          <button
            className="btn btn-primary"
            disabled={false}
            onClick={[Function]}
            type="button">
            确认
          </button>
        </div>
      </div>
      <div
        className="popup-map">
        <div
          className="map-view "
          id="CentralizedPopup" />
      </div>
    </div>
  </div>
</div>
`;

exports[`<CentralizedControllerPopup /> snapshot with popId="edit" 1`] = `
<div
  className="centralized-popup">
  <div
    className="modal-content ">
    <div
      className="modal-header">
      <button
        aria-label="Close"
        className="close"
        data-dismiss="modal"
        onClick={[Function]}
        type="button">
        <span
          aria-hidden="true">
          ×
        </span>
      </button>
      <h4
        className="modal-title">
        添加设备
      </h4>
    </div>
    <div
      className="modal-body">
      <div
        className="popup-left">
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="id">
            设备编号：
          </label>
          <div
            className="fixed-width-right">
            <input
              className="form-control"
              disabled={true}
              id="id"
              maxLength={16}
              onChange={[Function]}
              placeholder="id"
              type="text"
              value="sdf" />
            <span
              className="prompt hidden">
              不合法
            </span>
          </div>
        </div>
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="name">
            名称：
          </label>
          <div
            className="fixed-width-right">
            <input
              className="form-control"
              id="name"
              maxLength={16}
              onChange={[Function]}
              placeholder="name"
              type="text"
              value="name01" />
            <span
              className="prompt hidden">
              不合法
            </span>
          </div>
        </div>
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="model">
            型号：
          </label>
          <div
            className="fixed-width-right">
            <select
              className="form-control select form-control"
              disabled={false}
              id="model"
              onChange={[Function]}
              value="model01">
              <option
                value="model01">
                model01
              </option>
              <option
                value="model02">
                model02
              </option>
              <option
                value="model03">
                model03
              </option>
              <option
                value="model04">
                model04
              </option>
              <option
                value="model05">
                model05
              </option>
              <option
                value="model06">
                model06
              </option>
              <option
                value="model07">
                model07
              </option>
            </select>
          </div>
        </div>
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="domain">
            域：
          </label>
          <div
            className="fixed-width-right">
            <select
              className="form-control select form-control"
              id="domain"
              onChange={[Function]}
              value="domain01">
              <option
                value="domain01">
                domain01
              </option>
              <option
                value="domain02">
                domain02
              </option>
              <option
                value="domain03">
                domain03
              </option>
              <option
                value="domain04">
                domain04
              </option>
              <option
                value="domain05">
                domain05
              </option>
              <option
                value="domain06">
                domain06
              </option>
              <option
                value="domain07">
                domain07
              </option>
            </select>
            <span
              className="prompt hidden">
              请添加域
            </span>
          </div>
        </div>
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="lng">
            经度：
          </label>
          <div
            className="fixed-width-right">
            <input
              className="form-control"
              id="lng"
              onChange={[Function]}
              placeholder="lng"
              type="text"
              value={121.49971691534425} />
            <span
              className="prompt hidden">
              经度数不合法
            </span>
          </div>
        </div>
        <div
          className="form-group clearfix">
          <label
            className="fixed-width-left control-label"
            htmlFor="lat">
            纬度：
          </label>
          <div
            className="fixed-width-right">
            <input
              className="form-control"
              id="lat"
              onChange={[Function]}
              placeholder="lat"
              type="text"
              value={31.239658843127756} />
            <span
              className="prompt hidden">
              纬度数不合法
            </span>
          </div>
        </div>
        <div
          className="modal-footer">
          <button
            className="btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button">
            取消
          </button>
          <button
            className="btn btn-primary"
            disabled={false}
            onClick={[Function]}
            type="button">
            确认
          </button>
        </div>
      </div>
      <div
        className="popup-map">
        <div
          className="map-view "
          id="CentralizedPopup" />
      </div>
    </div>
  </div>
</div>
`;
